# PiCoGen

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  RELEASE_PROCESS.md  demo.sh  examples.html  index.html  infer.sh  picogen.sh  picogen1.html  picogen2.html  prepare.sh  pyproject.toml  requirements.txt  requirements_sheetsage.txt  setup_env.sh  sheetsage_prepare.sh  test.html  train.sh
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: main.yml  pr_checks.yml
asset/: requirements_picogen.txt  sheetsage_prepare.sh
assets/: config.json  requirements_picogen.txt  requirements_sheetsage.txt  vocab.json
config/: default.json
docker/: Dockerfile  Dockerfile-full  build.sh  push.sh  run.sh
docs/source/: conf.py  index.md  installation.md
generation/: run.py
generation/templates/: examples.html  examples_nav_item.html  examples_song.html
picogen/: config.py  data.py  infer.py  model.py  repr.py  test.py  train.py  utils.py  vocab.py
picogen2/: __init__.py  __main__.py  assets.py  eval.py  infer.py  model.py  repr.py  train.py  utils.py
picogen2/data/: align.py  dataset.py  download.py  preprocess.py
scripts/: prepare_changelog.py  release.sh
static/songs/anime/0l36TiVdd9w/: audio2midi.mid  human.mid  metadata.json  picogen1.mid  picogen2.mid  pop2piano.mid
static/songs/anime/5XfZNbCFIL0/: audio2midi.mid  human.mid  metadata.json  picogen1.mid  picogen2.mid  pop2piano.mid
static/songs/anime/60_2zt9l3Yk/: audio2midi.mid  human.mid  metadata.json  picogen1.mid  picogen2.mid  pop2piano.mid
static/songs/anime/AAoaH6o94OE/: audio2midi.mid  human.mid  metadata.json  picogen1.mid  picogen2.mid  pop2piano.mid
static/songs/anime/De8cLdX3Yvc/: audio2midi.mid  human.mid  metadata.json  picogen1.mid  picogen2.mid  pop2piano.mid
static/songs/anime/DwuJeGYlYyw/: audio2midi.mid  human.mid  metadata.json  picogen1.mid  picogen2.mid  pop2piano.mid
static/songs/anime/GdEJG-1QnKE/: audio2midi.mid  human.mid  metadata.json  picogen1.mid  picogen2.mid  pop2piano.mid
static/songs/anime/MHds7j3kQx8/: audio2midi.mid  human.mid  metadata.json  picogen1.mid  picogen2.mid  pop2piano.mid
static/songs/anime/OIBODIPC_8Y/: audio2midi.mid  human.mid  metadata.json  picogen1.mid  picogen2.mid  pop2piano.mid
static/songs/anime/OOD06yil2gg/: audio2midi.mid  human.mid  metadata.json  picogen1.mid  picogen2.mid  pop2piano.mid
static/songs/anime/Rj1eRzRUcHw/: audio2midi.mid  human.mid  metadata.json  picogen1.mid  picogen2.mid  pop2piano.mid
static/songs/anime/SSw15tSJAkU/: audio2midi.mid  human.mid  metadata.json  picogen1.mid  picogen2.mid  pop2piano.mid
static/songs/anime/ULpOWLWereE/: audio2midi.mid  human.mid  (+4 more)
tests/: test_picogen2.py
(+504 files in other folders)
